started working on a search function and finished a toggle check function

--- a/index.html
+++ b/index.html
@@ -16,7 +16,19 @@
             <input type="text" name="shopping-list-entry" class="js-shopping-list-entry" placeholder="e.g., broccoli">
             <button type="submit">Add item</button>
         </form>
+          <form class="searchBarDiv">
+            <label for="searchBar">Search Item </label>
+            <input type="text" name="searchBar" class="js-SearchBar" placeholder="Search..">
+            <button type="submit"></button>
+          </form>
+          <div class="js-toggle-All-Switch-UL">
+            <label class="switch">
+                <input class="js-toggle-click" type="checkbox">
+                <span class="slider"></span>
+              </label>
+          </div>
         <ul class="shopping-list js-shopping-list">
+            
         </ul>
     </div>
     <script src="//code.jquery.com/jquery.min.js"></script>
