--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <ul class="shopping-list js-shopping-list">
             
         </ul>
+        <div class="editItem"></div>
     </div>
     <script src="//code.jquery.com/jquery.min.js"></script>
     <script type="text/javascript" src="index.js"></script>
